# frcobot_ros2

./: README.md
fairino10_v6_moveit2_config/: package.xml
fairino16_v6_moveit2_config/: package.xml
fairino20_v6_moveit2_config/: package.xml
fairino30_v6_moveit2_config/: package.xml
fairino3_v6_moveit2_config/: package.xml
fairino3mt_v6_moveit2_config/: package.xml
fairino5_v6_moveit2_config/: .setup_assistant  package.xml
fairino5_v6_moveit2_config/config/: fairino5_v6_robot.ros2_control.xacro  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  pilz_cartesian_limits.yaml  ros2_controllers.yaml  trajectory_execution.yaml
fairino5_v6_moveit2_config/launch/: demo.launch.py
fairino5_v6_moveit2_config/tmp/: ddddompl_planning.yaml  ompl_planning.yaml  planning_pipeline_config.yaml
fairino_description/urdf/: fairino5_v6.urdf.xacro
fairino_hardware/: CMakeLists.txt  package.xml
fairino_hardware/include/fairino_hardware/: command_server.hpp  data_type_def.h  fairino_hardware_interface.hpp  fairino_robot.hpp  version_control.h
fairino_hardware/libfairino/lib/: libfairino.so.2
fairino_hardware/src/: command_server.cpp  command_server_node.cpp  fairino_hardware_interface.cpp  fairino_robot.cpp
